# caide-cpp-inliner

./: .travis.yml
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt  caide-inliner.cpp
src/cmd/cmake/: FindTCLAP.cmake
travis/: build-and-test.sh  install-prerequisites.sh
